# cmake-capnproto

./: .gitmodules  CMakeLists.txt  README.md
cmake/: capnp-c.cmake
